--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'Rajdhani',sans-serif;
+  color: #fff;
+  scroll-behavior: smooth;
+  
+}
+.navbar-brand{
+  font-size: 25px;
+}
+.form-select:focus{
+  border-color: none !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-select{
+  width: 80px !important;
+  color: #fff;
+  margin: 0 10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container-fluid{
+  width: 60%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.carousebox1{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.background-image{
+  height: 350px;
+    background: url(./img/cryptocurrency.webp) no-repeat center/cover ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.maintitle{
+  font-size: 80px;
+}
+.priceheader{
+  text-transform: uppercase;
+  font-size: 20px;
+ 
+}
+.container-1{
+  background-color:#111;
+  height: 100%;
+  width: 100%;
+}
+.main-table{
+margin: auto;
+}
+.table-title{
+  text-align: center;
+  font-size: 27px;
+  font-weight: 400;
+  letter-spacing: 2px;
+  word-spacing: 2px;
+  padding-top: 20px;
+}
+.input-text{
+  background-color: #111;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  outline: none;
+  padding: 18px 14px;
+  width: 50%;
+  margin: 20px 0;
+  font-size: 18px;
+}
+.coins-table{
+  width: 100%;
+  display: table;
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+.table-header{
+  background-color: #00a740;
+  /* border-top-left-radius: 5px;
+  border-top-right-radius: 5px; */
+}
+.table-header-row{
+  font-weight: 700;
+  font-size: 18px;
+  color: #111 !important;
+  
+}
+.table-header-title{
+  padding: 16px;
+}
+.title-head-left{
+  text-align: start;
+  
+}
+.title-head-right{
+  text-align: end;
+  width: 20%;
+  font-weight: 400;
+}
+.image-name-box{
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  align-items: center;
+}
+.coin-name-1{
+  text-transform: uppercase;
+  font-size: 25px;
+  font-weight: 400;
+ 
+}
+.coin-fullname{
+  text-transform: capitalize;
+  font-weight: 400;
+}
+.table-info-row{
+  border-bottom: 1px solid rgb(202, 202, 202);
 }
